# musik-hack-commons

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Projucer-Builds  README.md
JUCE-modules/lockfree/: lockfree.cpp  lockfree.h
modules/musikhack/: CMakeLists.txt
modules/musikhack/lockfree/: lockfree.h
modules/musikhack/sqlite3db/: deps  sqlite3db.c  sqlite3db.h
modules/yourcompany/: README.md
plugins/examples/: MinimalExample
plugins/examples/LockfreeExample/: CMakeLists.txt
plugins/examples/LockfreeExample/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
samples/FM Drums/: CREDITS.txt
